# aoc2022

./: .gitignore  Cargo.toml
day_01/: day_01.rs
day_01/src/: main.rs
day_02/: day_02.rs
day_03/: day_03.rs
day_04/: day_04.rs
day_05/: day_05.rs
src/: main.rs  tree.rs
src/solutions/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs
